crates/type_checker/src/tests/snapshots/call_undef_func.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 242
expression: "(test[1], res)"
---
- "\nfn plusOne(x: int) -> int {\n    x + 1\n}\nfn main() {\n    plusThree(1)\n}\n"
- Err: "Call to undefined function: `plusThree`"

