crates/type_checker/src/tests/snapshots/cond_bad_cond_1.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 295
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let x: int8 = 1\n    let y: int16 = 2\n    if x < y {\n        1\n    }\n}\n"
- Err: "Mismatched types in binop: `int8` != `int16`"

