crates/type_checker/src/tests/snapshots/def_func_basic.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn foo() {\n    1\n}\n"
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
            body:
              node:
                Block:
                  list:
                    - node:
                        Lit:
                          value:
                            Int32: 1
                      ty: Int32
              ty: Int32
        ty: ~

