crates/type_checker/src/tests/snapshots/def_func_cant_redefine.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 386
expression: "(test[1], res)"
---
- "\nfn foo() { }\nfn foo() { }\n"
- Err: "Function `foo` can't be redefined"

