crates/type_checker/src/tests/snapshots/def_func_expected_int_last_stmt_1.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn foo(a: int, b: float) -> int { }\n"
- Err: "Function `foo` should return type `int` but last statement is `void`"

