crates/type_checker/src/tests/snapshots/def_func_multi_args.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn foo(a: int, b: float) { }\n"
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: foo
              args:
                - - a
                  - Int32
                - - b
                  - Float
              ret_ty: Void
              is_extern: false
            body:
              node:
                Block:
                  list: []
              ty: Void
        ty: ~

