crates/type_checker/src/tests/snapshots/def_func_stmt_end_of_body.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let a: int8 = 1\n}\n"
- Ok:
    nodes:
      - kind:
          Fn:
            proto:
              name: foo
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: a
                          antn: Int8
                          init:
                            kind:
                              Lit:
                                value:
                                  Int8: 1
                                ty: Int8
                  ty: Void

