crates/type_checker/src/tests/snapshots/def_func_void_ret_expr_body.snap
---
source: crates/type_checker/src/tests.rs
assertion_line: 369
expression: "(test[1], res)"
---
- "\nfn foo(a: int) {\n    a + 1\n}\n"
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: foo
              args:
                - - a
                  - Int32
              ret_ty: Void
              is_extern: false
            body:
              node:
                Block:
                  list:
                    - node:
                        BinOp:
                          op: Add
                          lhs:
                            node:
                              Ident:
                                name: a
                            ty: Int32
                          rhs:
                            node:
                              Lit:
                                value:
                                  Int32: 1
                            ty: Int32
                      ty: Int32
              ty: Int32
        ty: ~

